tests/should_fail/syntax_while_let_non_option.nv
module main

// SHOULD FAIL: while let on a non-Option (Int)
fn test() {
    let x = 5
    while let v = x {
        println(v)
    }
}
test()
